Unity/Assets/akanevrc/TeuchiUdon/Tests/src/Statements/LetBindMut2.teuchi
// error
{
  let x = "ng";
  x <- "ok";
  UnityEngine.Debug.Log(x);
};
